[package]
name = "reflect_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflect_test_proc = { version = "0.1.0", path = "reflect_test_proc" }
test_trait = { version = "0.1.0", path = "test_trait" }
